--- a/VisualStudioOnline.Api.Rest.Test/VisualStudioOnline.Api.Rest.Test.csproj
+++ b/VisualStudioOnline.Api.Rest.Test/VisualStudioOnline.Api.Rest.Test.csproj
@@ -56,6 +56,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="TagRestClientV1Test.cs" />
     <Compile Include="WitRestClientV1Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WitRestClientV2Test.cs" />
