--- a/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
+++ b/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="RestClient.cs" />
+    <Compile Include="Tag.cs" />
+    <Compile Include="TagRestClientV1.cs" />
     <Compile Include="WitRestClientV1.cs" />
     <Compile Include="WitRestClientV2.cs" />
     <Compile Include="WorkItem.cs" />
