Added test setting

--- a/VisualStudioOnline.Api.Rest.Test/Properties/Settings.settings
+++ b/VisualStudioOnline.Api.Rest.Test/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="DefaultUser" Type="System.String" Scope="User">
       <Value Profile="(Default)">test</Value>
     </Setting>
+    <Setting Name="ProjectId" Type="System.String" Scope="User">
+      <Value Profile="(Default)">00000000-0000-0000-0000-000000000000</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
