--- a/VisualStudioOnline.Api.Rest.Test/app.config
+++ b/VisualStudioOnline.Api.Rest.Test/app.config
@@ -32,6 +32,9 @@
             <setting name="DefaultUser" serializeAs="String">
                 <value>test</value>
             </setting>
+            <setting name="ProjectId" serializeAs="String">
+                <value>00000000-0000-0000-0000-000000000000</value>
+            </setting>
         </VisualStudioOnline.Api.Rest.Test.Properties.Settings>
     </userSettings>
 </configuration>
