--- a/VisualStudioOnline.Api.Rest.Test/app.config
+++ b/VisualStudioOnline.Api.Rest.Test/app.config
@@ -35,6 +35,9 @@
             <setting name="ProjectId" serializeAs="String">
                 <value>00000000-0000-0000-0000-000000000000</value>
             </setting>
+            <setting name="AccessToken" serializeAs="String">
+                <value>TestToken</value>
+            </setting>
         </VisualStudioOnline.Api.Rest.Test.Properties.Settings>
     </userSettings>
 </configuration>
