--- a/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
+++ b/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="V1\Model\Tag.cs" />
     <Compile Include="V1\TagRestClient.cs" />
     <Compile Include="V1\WitRestClient.cs" />
+    <Compile Include="V2\Model\WorkItemType.cs" />
     <Compile Include="V2\WitRestClient.cs" />
     <Compile Include="V1\Model\WorkItem.cs" />
   </ItemGroup>
