--- a/VisualStudioOnline.Api.Rest.Test/app.config
+++ b/VisualStudioOnline.Api.Rest.Test/app.config
@@ -38,6 +38,12 @@
             <setting name="AccessToken" serializeAs="String">
                 <value>TestToken</value>
             </setting>
+            <setting name="WorkItemId" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WorkItemRevision" serializeAs="String">
+                <value>0</value>
+            </setting>
         </VisualStudioOnline.Api.Rest.Test.Properties.Settings>
     </userSettings>
 </configuration>
