--- a/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
+++ b/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
@@ -61,6 +61,7 @@
     <Compile Include="V2\Model\Query.cs" />
     <Compile Include="V2\Model\WorkItem.cs" />
     <Compile Include="V2\Model\WorkItemType.cs" />
+    <Compile Include="V2\ProjectCollectionRestClient.cs" />
     <Compile Include="V2\ProjectRestClient.cs" />
     <Compile Include="V2\WitRestClient.cs" />
     <Compile Include="V1\Model\WorkItem.cs" />
