--- a/VisualStudioOnline.Api.Rest.Test/VisualStudioOnline.Api.Rest.Test.csproj
+++ b/VisualStudioOnline.Api.Rest.Test/VisualStudioOnline.Api.Rest.Test.csproj
@@ -60,6 +60,7 @@
     <Compile Include="V1\AccountRestClientTest.cs" />
     <Compile Include="V1\ProjectRestClientTest.cs" />
     <Compile Include="V1\TagRestClientTest.cs" />
+    <Compile Include="V1\VersionControlRestClientTest.cs" />
     <Compile Include="V1\WitRestClientTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="V2\ProjectCollectionRestClientTest.cs" />
