--- a/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
+++ b/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
@@ -48,27 +48,26 @@
   <ItemGroup>
     <Compile Include="HttpRequestHeaderFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="V1\AccountRestClient.cs" />
+    <Compile Include="V1\Client\AccountRestClient.cs" />
     <Compile Include="V1\Model\Account.cs" />
-    <Compile Include="V1\Model\Query.cs" />
+    <Compile Include="V1\Model\QueryOld.cs" />
     <Compile Include="RestClient.cs" />
     <Compile Include="V1\Model\Tag.cs" />
     <Compile Include="V1\Model\Team.cs" />
     <Compile Include="V1\Model\VersionControl.cs" />
-    <Compile Include="V1\ProjectRestClient.cs" />
-    <Compile Include="V1\TagRestClient.cs" />
-    <Compile Include="V1\VersionControlRestClient.cs" />
-    <Compile Include="V1\WitRestClient.cs" />
-    <Compile Include="V2\Model\ClassificationNode.cs" />
+    <Compile Include="V1\Client\ProjectRestClient.cs" />
+    <Compile Include="V1\Client\TagRestClient.cs" />
+    <Compile Include="V1\Client\VersionControlRestClient.cs" />
+    <Compile Include="V1\Client\WitRestClientOld.cs" />
+    <Compile Include="V1\Model\ClassificationNode.cs" />
     <Compile Include="Common.cs" />
-    <Compile Include="V2\Model\Project.cs" />
-    <Compile Include="V2\Model\Query.cs" />
-    <Compile Include="V2\Model\WorkItem.cs" />
-    <Compile Include="V2\Model\WorkItemType.cs" />
-    <Compile Include="V2\ProjectCollectionRestClient.cs" />
-    <Compile Include="V2\ProjectRestClient.cs" />
-    <Compile Include="V2\WitRestClient.cs" />
+    <Compile Include="V1\Model\Project.cs" />
+    <Compile Include="V1\Model\Query.cs" />
     <Compile Include="V1\Model\WorkItem.cs" />
+    <Compile Include="V1\Model\WorkItemType.cs" />
+    <Compile Include="V1\Client\ProjectCollectionRestClient.cs" />
+    <Compile Include="V1\Client\WitRestClient.cs" />
+    <Compile Include="V1\Model\WorkItemOld.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
