--- a/VisualStudioOnline.Api.Rest.Test/VisualStudioOnline.Api.Rest.Test.csproj
+++ b/VisualStudioOnline.Api.Rest.Test/VisualStudioOnline.Api.Rest.Test.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="V1\AccountRestClientTest.cs" />
+    <Compile Include="V1\BuildRestClientTests.cs" />
     <Compile Include="V1\ProjectRestClientTest.cs" />
     <Compile Include="V1\TagRestClientTest.cs" />
     <Compile Include="V1\VersionControlRestClientTest.cs" />
