--- a/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
+++ b/VisualStudioOnline.Api.Rest/VisualStudioOnline.Api.Rest.csproj
@@ -49,8 +49,10 @@
     <Compile Include="HttpRequestHeaderFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="V1\Client\AccountRestClient.cs" />
+    <Compile Include="V1\Client\BuildRestClient.cs" />
     <Compile Include="V1\Model\Account.cs" />
     <Compile Include="RestClient.cs" />
+    <Compile Include="V1\Model\Build.cs" />
     <Compile Include="V1\Model\Tag.cs" />
     <Compile Include="V1\Model\Team.cs" />
     <Compile Include="V1\Model\VersionControl.cs" />
