--- a/VisualStudioOnline.Api.Rest.Test/app.config
+++ b/VisualStudioOnline.Api.Rest.Test/app.config
@@ -44,6 +44,15 @@
             <setting name="WorkItemRevision" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="CommitId" serializeAs="String">
+                <value>00000000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="FilePath" serializeAs="String">
+                <value>/Folder/File.cs</value>
+            </setting>
+  	        <setting name="FolderPath" serializeAs="String">
+               <value>/Folder</value>
+            </setting>
         </VisualStudioOnline.Api.Rest.Test.Properties.Settings>
     </userSettings>
 </configuration>
